k8s/tools/audiobookshelf/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: default
  labels:
    app: audiobookshelf
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: audiobookshelf
